--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3905,6 +3905,7 @@ body.is-preload #header.alt .logo {
 /* Footer */
 
 #footer {
+	color: #636363;
 	display: -moz-flex;
 	display: -webkit-flex;
 	display: -ms-flex;
@@ -3917,6 +3918,14 @@ body.is-preload #header.alt .logo {
 	width: calc(100% + 2em);
 	margin: 0 0 3em -2em;
 }
+
+	#footer h1, h2, h3, dt {
+		color: #636363;
+	}
+
+	#footer dl dt {
+		color: #636363;
+	}
 
 #footer>* {
 	width: calc(50% - 2em);
